WebCore:

2009-04-24  Fumitoshi Ukai  <ukai@google.com>

        Reviewed by Dimitri Glazkov.

        https://bugs.webkit.org/show_bug.cgi?id=25257
        Use null for unspecified event listener attributes of XMLHttpRequest
        and XMLHttpRequestUpload in v8 binding.

        cf. http://www.whatwg.org/specs/web-apps/current-work/#event-handler-attributes
        An event handler attribute, unless otherwise specified, can either
        have the value null or be set to a Function object.
        Initially, an event handler attribute must be set to null.

        Test: fast/xmlhttprequest/xmlhttprequest-default-attributes.html

        * bindings/v8/custom/V8XMLHttpRequestCustom.cpp:
        (WebCore::ACCESSOR_GETTER): Changed to use v8::Null().
        * bindings/v8/custom/V8XMLHttpRequestUploadCustom.cpp:
        (WebCore::ACCESSOR_GETTER): Ditto.

LayoutTests:

2009-04-24  Fumitoshi Ukai  <ukai@google.com>

        Reviewed by Dimitri Glazkov.

        https://bugs.webkit.org/show_bug.cgi?id=25257
        Verify XMLHttpRequest has correct attribute value by default.

        * fast/xmlhttprequest/resources/xmlhttprequest-default-attributes.js: Added.
        * fast/xmlhttprequest/xmlhttprequest-default-attributes-expected.txt: Added.
        * fast/xmlhttprequest/xmlhttprequest-default-attributes.html: Added.

Canonical link: https://commits.webkit.org/34878@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@42828 268f45cc-cd09-0410-ab3c-d52691b4dbfc