WebCore/bindings/v8/custom/V8XMLHttpRequestCustom.cpp
@@ -68,7 +68,7 @@ ACCESSOR_GETTER(XMLHttpRequestOnabort)
         v8::Local<v8::Object> v8Listener = listener->getListenerObject();
         return v8Listener;
     }
-    return v8::Undefined();
+    return v8::Null();
 }
 
 ACCESSOR_SETTER(XMLHttpRequestOnabort)
@@ -102,7 +102,7 @@ ACCESSOR_GETTER(XMLHttpRequestOnerror)
         v8::Local<v8::Object> v8Listener = listener->getListenerObject();
         return v8Listener;
     }
-    return v8::Undefined();
+    return v8::Null();
 }
 
 ACCESSOR_SETTER(XMLHttpRequestOnerror)
@@ -136,7 +136,7 @@ ACCESSOR_GETTER(XMLHttpRequestOnload)
         v8::Local<v8::Object> v8Listener = listener->getListenerObject();
         return v8Listener;
     }
-    return v8::Undefined();
+    return v8::Null();
 }
 
 ACCESSOR_SETTER(XMLHttpRequestOnload)
@@ -170,7 +170,7 @@ ACCESSOR_GETTER(XMLHttpRequestOnloadstart)
         v8::Local<v8::Object> v8Listener = listener->getListenerObject();
         return v8Listener;
     }
-    return v8::Undefined();
+    return v8::Null();
 }
 
 ACCESSOR_SETTER(XMLHttpRequestOnloadstart)
@@ -204,7 +204,7 @@ ACCESSOR_GETTER(XMLHttpRequestOnprogress)
         v8::Local<v8::Object> v8Listener = listener->getListenerObject();
         return v8Listener;
     }
-    return v8::Undefined();
+    return v8::Null();
 }
 
 ACCESSOR_SETTER(XMLHttpRequestOnprogress)
@@ -238,7 +238,7 @@ ACCESSOR_GETTER(XMLHttpRequestOnreadystatechange)
         v8::Local<v8::Object> v8Listener = listener->getListenerObject();
         return v8Listener;
     }
-    return v8::Undefined();
+    return v8::Null();
 }
 
 ACCESSOR_SETTER(XMLHttpRequestOnreadystatechange)
