WebCore/bindings/v8/custom/V8XMLHttpRequestUploadCustom.cpp
@@ -52,7 +52,7 @@ ACCESSOR_GETTER(XMLHttpRequestUploadOnabort)
         v8::Local<v8::Object> v8Listener = listener->getListenerObject();
         return v8Listener;
     }
-    return v8::Undefined();
+    return v8::Null();
 }
 
 ACCESSOR_SETTER(XMLHttpRequestUploadOnabort)
@@ -91,7 +91,7 @@ ACCESSOR_GETTER(XMLHttpRequestUploadOnerror)
         v8::Local<v8::Object> v8Listener = listener->getListenerObject();
         return v8Listener;
     }
-    return v8::Undefined();
+    return v8::Null();
 }
 
 ACCESSOR_SETTER(XMLHttpRequestUploadOnerror)
@@ -130,7 +130,7 @@ ACCESSOR_GETTER(XMLHttpRequestUploadOnload)
         v8::Local<v8::Object> v8Listener = listener->getListenerObject();
         return v8Listener;
     }
-    return v8::Undefined();
+    return v8::Null();
 }
 
 ACCESSOR_SETTER(XMLHttpRequestUploadOnload)
@@ -169,7 +169,7 @@ ACCESSOR_GETTER(XMLHttpRequestUploadOnloadstart)
         v8::Local<v8::Object> v8Listener = listener->getListenerObject();
         return v8Listener;
     }
-    return v8::Undefined();
+    return v8::Null();
 }
 
 ACCESSOR_SETTER(XMLHttpRequestUploadOnloadstart)
@@ -208,7 +208,7 @@ ACCESSOR_GETTER(XMLHttpRequestUploadOnprogress)
         v8::Local<v8::Object> v8Listener = listener->getListenerObject();
         return v8Listener;
     }
-    return v8::Undefined();
+    return v8::Null();
 }
 
 ACCESSOR_SETTER(XMLHttpRequestUploadOnprogress)
